# SlimFaas

./: .editorconfig  .gitignore  404.html  ALL_COMPILATION_ERRORS_FIXED.md  ALL_TESTS_FIXED.md  CHANGELOG.md  CHANGELOG_ENTRY.md  CNAME  CONFIGURATION_README.md  Dockerfile  Dockerfile.dotnet  FINAL_SUMMARY.md  GOVERNANCE.md  INDEX.md  MIGRATION_CONFIGURATION.md  MIGRATION_ENDPOINTS.md  NAMESPACE_PROVIDER_DI_FIX.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SLIMJOBSWORKER_TESTS_FIXED.md  SlimFaas.sln  TESTS_DOCUMENTATION_UPDATE.md  TESTS_FIXES.md  TRANSFORMATION_COMPLETE.md  WORKERS_TESTS_FIXED.md  about.html  agent.md  autoscaling.html  clients.html  contact.html  data-files.html  data-sets.html  docker-compose.example.yml  docker-compose.yml  events.html  functions.html  get-started.html  home.html  how-it-works.html  (+10 more)
.bin/: generate-changelog.sh
.github/: dependabot.yml
client/python/slimfaas-client/: README.md  pyproject.toml
client/python/slimfaas-client/examples/: job_example.py  simple_example.py
client/python/slimfaas-client/src/slimfaas_client/: __init__.py  _client.py  _models.py
client/python/slimfaas-client/tests/: test_client.py
demo/: bruno-slimfaas-demo.json  deployment-cron.yaml  deployment-functions.yml  deployment-kafka.yml  deployment-mysql.yml  deployment-slimfaas.yml  service-account-slimfaas.yml  slimfaas-nodeport.yml
documentation/: BREAKING_CHANGES_ENVIRONMENT_VARIABLES.md  CONFIGURATION_NOTICE.md  IMPLEMENTATION_COMPLETE.md  autoscaling.md  clients.md  cpu-rate-limiting.md  data-files.md  data-sets.md  events.md  function-status-record.md  functions.md  get-started.md  home.md  jobs.md  (+13 more)
(+1595 files in other folders)
